updated welcome message

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">
-        Welcome to azure app services
+        Welcome to azure app in git hub
     </h1>
    
 </div>
