--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,5 +8,7 @@
     <h1 class="display-4">
         Welcome to azure app in git hub
     </h1>
-   
+   <h3>
+       @ViewData["Greeting"]
+   </h3>
 </div>
